--- a/ACL4SSR_Online_Full.ini
+++ b/ACL4SSR_Online_Full.ini
@@ -10,8 +10,8 @@
 ;增强国外GFW：支持
 
 ;设置规则标志位
-ruleset=🎯 直连列表,https://raw.githubusercontent.com/casojie/clash_rule/master/DirectList.list
-ruleset=🚀 代理列表,https://raw.githubusercontent.com/casojie/clash_rule/master/ProxyList.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/casojie/clash_rule/master/DirectList.list
+ruleset=🚀 GFW代理列表,https://raw.githubusercontent.com/casojie/clash_rule/master/ProxyList.list
 
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
