--- a/ACL4SSR_Online_Full.ini
+++ b/ACL4SSR_Online_Full.ini
@@ -121,6 +121,6 @@ skip_failed_links=true
 #过滤节点，正则匹配
 exclude_remarks=(重置|IPV6|流量|用户|本站|漏洞|车|邀|免翻|邀请|域名|机场|刷新|禁止|备用登录|计划|面板|忘记|到期|过期时间|套餐|官网|更多|关注|25倍率|增加|持续|渠道|购买|QQ|二手)
 
-clash_rule_base=https://raw.githubusercontent.com/casojie/clash_rule/master/GeneralClashConfig.yml
+;clash_rule_base=https://raw.githubusercontent.com/casojie/clash_rule/master/GeneralClashConfig.yml
 
 ;luck
