--- a/ACL4SSR_Online_Full.ini
+++ b/ACL4SSR_Online_Full.ini
@@ -78,39 +78,39 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 主节点选择`select`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 印度节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🚀 主节点选择`select`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 东南亚节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🔯 备用机场节点`select`!!GROUPID=1
 custom_proxy_group=🚀 手动切换`select`.*
-custom_proxy_group=📲 电报消息`select`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 印度节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🚀 GFW代理列表`select`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 印度节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=💬 OpenAi`select`[]🇸🇬 狮城节点`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 印度节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=💬 BingAi`select`[]🇸🇬 狮城节点`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 印度节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=💬 ClaudeAi`select`[]🇸🇬 狮城节点`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 印度节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=Ⓜ️ Github`select`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 印度节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=📹 油管视频`select`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 印度节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🎥 奈飞视频`select`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 印度节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=📺 巴哈姆特`select`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 印度节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 印度节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🌍 国外媒体`select`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 印度节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🌏 国内媒体`select`[]🎯 全球直连`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 印度节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=📢 谷歌`select`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 印度节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=Ⓜ️ 微软`select`[]🎯 全球直连`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 印度节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🍎 苹果服务`select`[]🎯 全球直连`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 印度节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🎮 游戏平台`select`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 印度节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 印度节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 印度节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🎯 直连列表`select`[]🎯 全球直连`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 印度节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🚀 代理列表`select`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 印度节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=📲 电报消息`select`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 东南亚节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🚀 GFW代理列表`select`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 东南亚节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=💬 OpenAi`select`[]🇸🇬 狮城节点`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 东南亚节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=💬 BingAi`select`[]🇸🇬 狮城节点`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 东南亚节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=💬 ClaudeAi`select`[]🇸🇬 狮城节点`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 东南亚节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=Ⓜ️ Github`select`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 东南亚节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=📹 油管视频`select`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 东南亚节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🎥 奈飞视频`select`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 东南亚节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=📺 巴哈姆特`select`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 东南亚节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 东南亚节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🌍 国外媒体`select`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 东南亚节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🌏 国内媒体`select`[]🎯 全球直连`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 东南亚节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=📢 谷歌`select`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 东南亚节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=Ⓜ️ 微软`select`[]🎯 全球直连`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 东南亚节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🍎 苹果服务`select`[]🎯 全球直连`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 东南亚节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🎮 游戏平台`select`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 东南亚节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 东南亚节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 东南亚节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🎯 直连列表`select`[]🎯 全球直连`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 东南亚节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🚀 代理列表`select`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 东南亚节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🆎 AdBlock`select`[]DIRECT`[]REJECT
 custom_proxy_group=🇭🇰 香港澳门节点`url-test`!!GROUPID=0!!(港|香港|澳门|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,3,15
 custom_proxy_group=🇯🇵 日本节点`url-test`!!GROUPID=0!!(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,3,15
 custom_proxy_group=🇺🇲 美洲节点`url-test`!!GROUPID=0!!(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|United States|加拿大|Canada)`http://www.gstatic.com/generate_204`300,3,15
 custom_proxy_group=🇨🇳 台湾节点`url-test`!!GROUPID=0!!(台|台湾|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,3,15
-custom_proxy_group=🇮🇳 印度节点`url-test`!!GROUPID=0!!(印度|IN|孟买|马哈拉施|India)`http://www.gstatic.com/generate_204`300,3,15
+custom_proxy_group=🇮🇳 东南亚节点`url-test`!!GROUPID=0!!(印度|IN|孟买|马哈拉施|India|越南|菲律宾|泰国)`http://www.gstatic.com/generate_204`300,3,15
 custom_proxy_group=🇸🇬 狮城节点`url-test`!!GROUPID=0!!(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,3,15
 custom_proxy_group=🇰🇷 韩国节点`url-test`!!GROUPID=0!!(KR|Korea|KOR|首尔|韩|韓)`http://www.gstatic.com/generate_204`300,3,15
 custom_proxy_group=🇷🇺 俄罗斯节点`url-test`!!GROUPID=0!!(RU|俄罗斯|莫斯科|Russia)`http://www.gstatic.com/generate_204`300,3,15
-custom_proxy_group=🇩🇪 欧洲节点`url-test`!!GROUPID=0!!(英国|德国|法国|荷兰|爱尔兰|French|Kingdom|German)`http://www.gstatic.com/generate_204`300,3,15
+custom_proxy_group=🇩🇪 欧洲节点`url-test`!!GROUPID=0!!(英国|德国|法国|荷兰|爱尔兰|意大利|土耳其|French|Kingdom|German)`http://www.gstatic.com/generate_204`300,3,15
 custom_proxy_group=🇦🇺 澳洲节点`url-test`!!GROUPID=0!!(澳洲|澳大|悉尼|Australia)`http://www.gstatic.com/generate_204`300,3,15
 ;设置分组标志位
 
