--- a/ACL4SSR_Online_Full.ini
+++ b/ACL4SSR_Online_Full.ini
@@ -48,6 +48,8 @@ ruleset=💬 BingAi,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cla
 ruleset=💬 ClaudeAi,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Claude.list
 ruleset=💬 ClaudeAi,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/ClaudeAI.list
 
+ruleset=📢 GeminiAi,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/master/Clash/Ruleset/Gemini.list
+
 ruleset=🍎 苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
 
 ruleset=📲 电报消息,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
@@ -86,6 +88,7 @@ custom_proxy_group=🚀 GFW代理列表`select`[]🚀 主节点选择`[]🇭🇰
 custom_proxy_group=💬 OpenAi`select`[]🇸🇬 狮城节点`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 东南亚节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=💬 BingAi`select`[]🇸🇬 狮城节点`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 东南亚节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=💬 ClaudeAi`select`[]🇸🇬 狮城节点`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 东南亚节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=📢 GeminiAi`select`[]🇸🇬 狮城节点`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 东南亚节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=Ⓜ️ Github`select`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 东南亚节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=📹 油管视频`select`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 东南亚节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🎥 奈飞视频`select`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 东南亚节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 手动切换`[]DIRECT
